infra/k8s/rook-ceph.yaml
# Création du namespace
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
