infra/k8s/elasticsearch.yaml
---
# Configuration de la politique réseau pour Elasticsearch
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-elasticsearch-traffic
  namespace: elasticsearch
spec:
  description: "Allow traffic to Elasticsearch"
  endpointSelector:
    matchLabels:
      app: elasticsearch-master
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: banadoctor-backend
    toPorts:
    - ports:
      - port: "9200"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        app: filebeat
    toPorts:
    - ports:
      - port: "9200"
        protocol: TCP
  egress: []
---
# Configuration de la politique réseau pour Kibana
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kibana-traffic
  namespace: elasticsearch
spec:
  description: "Allow traffic to Kibana"
  endpointSelector:
    matchLabels:
      app: kibana-kibana
  ingress:
  - fromEndpoints:
    - {}
    toPorts:
    - ports:
      - port: "5601"
        protocol: TCP
  egress: []
---
# Configuration de la politique réseau pour Filebeat
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-filebeat-traffic
  namespace: elasticsearch
spec:
  description: "Allow traffic from Filebeat"
  endpointSelector:
    matchLabels:
      app: filebeat
  ingress: []
  egress:
  - toEndpoints:
    - matchLabels:
        app: elasticsearch-master
    toPorts:
    - ports:
      - port: "9200"
        protocol: TCP
