infra/k8s/geode.yaml
---
# Configuration de la politique réseau pour Apache Geode
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-geode-traffic
  namespace: cache
spec:
  description: "Allow traffic to Apache Geode"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: geode
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: banadoctor-backend
    toPorts:
    - ports:
      - port: "10334"
        protocol: TCP
      - port: "40404"
        protocol: TCP
      - port: "7070"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: geode
    toPorts:
    - ports:
      - port: "10334-10433"
        protocol: TCP
      - port: "40404"
        protocol: TCP
      - port: "7070"
        protocol: TCP
  egress: []
