infra/k8s/ignite.yaml
---
# Configuration de la politique réseau pour Apache Ignite
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ignite-traffic
  namespace: cache
spec:
  description: "Allow traffic to Apache Ignite"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ignite
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: banadoctor-backend
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      - port: "10800-10802"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: ignite
    toPorts:
    - ports:
      - port: "47100"
        protocol: TCP
      - port: "47101"
        protocol: TCP
      - port: "47500"
        protocol: TCP
      - port: "47501"
        protocol: TCP
  egress: []
