infra/k8s/influxdb.yaml
---
# Configuration de la politique réseau pour InfluxDB
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-influxdb-traffic
  namespace: monitoring
spec:
  description: "Allow traffic to InfluxDB"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: influxdb
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: telegraf
    toPorts:
    - ports:
      - port: "8086"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: banadoctor-backend
    toPorts:
    - ports:
      - port: "8086"
        protocol: TCP
  egress: []
---
# Configuration de la politique réseau pour Telegraf
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-telegraf-traffic
  namespace: monitoring
spec:
  description: "Allow traffic from Telegraf"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: telegraf
  egress:
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/name: influxdb
    toPorts:
    - ports:
      - port: "8086"
        protocol: TCP
  - toEndpoints:
    - {}
    toPorts:
    - ports:
      - port: "10250"
        protocol: TCP
      - port: "10255"
        protocol: TCP
      - port: "4194"
        protocol: TCP
      - port: "4242"
        protocol: TCP
  ingress: []
