infra/k8s/kafka.yaml
---
# Configuration de la politique réseau pour Kafka
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kafka-traffic
  namespace: kafka
spec:
  description: "Allow traffic to Kafka"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kafka
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: banadoctor-backend
    toPorts:
    - ports:
      - port: "9092"
        protocol: TCP
      - port: "9093"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/name: zookeeper
    toPorts:
    - ports:
      - port: "2181"
        protocol: TCP
---
# Configuration de la politique réseau pour Zookeeper
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-zookeeper-traffic
  namespace: kafka
spec:
  description: "Allow traffic to Zookeeper"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: zookeeper
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: kafka
    toPorts:
    - ports:
      - port: "2181"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: kafka
    toPorts:
    - ports:
      - port: "2888"
        protocol: TCP
      - port: "3888"
        protocol: TCP
  egress: []
