infra/k8s/keycloak.yaml
---
# Configuration du client pour la gestion de Keycloak
apiVersion: v1
kind: Service
metadata:
  name: keycloak-client
  namespace: keycloak
  labels:
    app: keycloak-client
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
---
# Configuration de l'ingress pour le client Keycloak
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-client
  namespace: keycloak
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: auth.banadoctor.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
  tls:
    - hosts:
        - auth.banadoctor.com
      secretName: keycloak-tls
---
# Configuration de la politique réseau pour Keycloak
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-keycloak-traffic
  namespace: keycloak
spec:
  description: "Allow traffic to Keycloak"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: keycloak
  ingress:
  - fromEndpoints:
    - {}
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      - port: "8443"
        protocol: TCP
  egress:
  - toEndpoints:
    - {}
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "443"
        protocol: TCP
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
