infra/k8s/kubevirt.yaml
---
# Configuration de la politique réseau pour KubeVirt
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kubevirt-traffic
  namespace: kubevirt
spec:
  description: "Allow traffic to KubeVirt components"
  endpointSelector:
    matchLabels:
      kubevirt.io: ""
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
      - port: "8443"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:app: kubevirt
    toPorts:
    - ports:
      - port: "8443"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
      - port: "53"
        protocol: UDP
  - toEndpoints:
    - matchLabels:
        k8s:app: cdi-uploadproxy
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
