infra/k8s/memcached.yaml
---
# Configuration de la politique réseau pour Memcached
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-memcached-traffic
  namespace: cache
spec:
  description: "Allow traffic to Memcached"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: memcached
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: banadoctor-backend
    toPorts:
    - ports:
      - port: "11211"
        protocol: TCP
  egress: []
