infra/k8s/minio.yaml
---
# Installation de MinIO Client (mc)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-client
  namespace: storage
  labels:
    app: minio-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio-client
  template:
    metadata:
      labels:
        app: minio-client
    spec:
      containers:
      - name: minio-client
        image: minio/mc:RELEASE.2023-02-09T05-16-53Z
        command: ["/bin/sh", "-c"]
        args:
          - |
            sleep 3600
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
        volumeMounts:
        - name: config-dir
          mountPath: /root/.mc
      volumes:
      - name: config-dir
        emptyDir: {}
      restartPolicy: Always
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
---
# Configuration de la politique réseau pour MinIO
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-minio-traffic
  namespace: storage
spec:
  description: "Allow traffic to MinIO"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: minio
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: banadoctor-backend
    toPorts:
    - ports:
      - port: "9000"
        protocol: TCP
      - port: "9001"
        protocol: TCP
  egress: []
---
# Configuration de la politique réseau pour MinIO Client
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-minio-client-traffic
  namespace: storage
spec:
  description: "Allow traffic from MinIO Client"
  endpointSelector:
    matchLabels:
      app: minio-client
  egress:
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/name: minio
    toPorts:
    - ports:
      - port: "9000"
        protocol: TCP
      - port: "9001"
        protocol: TCP
  - toEndpoints:
    - {}
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
      - port: "80"
        protocol: TCP
      - port: "443"
        protocol: TCP
  ingress: []
