infra/k8s/neo4j.yaml
---
# Configuration de la politique réseau pour Neo4j
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-neo4j-traffic
  namespace: graph
spec:
  description: "Allow traffic to Neo4j"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: neo4j
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: banadoctor-backend
    toPorts:
    - ports:
      - port: "7474"
        protocol: TCP
      - port: "7473"
        protocol: TCP
      - port: "7687"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: neo4j
    toPorts:
    - ports:
      - port: "5000"
        protocol: TCP
      - port: "6000"
        protocol: TCP
      - port: "7000"
        protocol: TCP
  egress: []
