infra/k8s/portainer.yaml
---
# Configuration de la politique réseau pour Portainer
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-portainer-traffic
  namespace: portainer
spec:
  description: "Allow traffic to Portainer"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: portainer
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
    toPorts:
    - ports:
      - port: "9000"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: monitoring
    toPorts:
    - ports:
      - port: "9000"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: portainer
    toPorts:
    - ports:
      - port: "9000"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:app.kubernetes.io/name: postgresql-ha
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:app.kubernetes.io/name: keycloak
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      - port: "8443"
        protocol: TCP
