infra/k8s/rabbitmq.yaml
---
# Configuration de la politique réseau pour RabbitMQ
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-rabbitmq-traffic
  namespace: messaging
spec:
  description: "Allow traffic to RabbitMQ"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: rabbitmq
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: banadoctor-backend
    toPorts:
    - ports:
      - port: "5672"
        protocol: TCP
      - port: "15672"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: rabbitmq
    toPorts:
    - ports:
      - port: "4369"
        protocol: TCP
      - port: "5672"
        protocol: TCP
      - port: "15672"
        protocol: TCP
      - port: "25672"
        protocol: TCP
  egress: []
