infra/k8s/redis-cluster.yaml
---
# Configuration de la politique réseau pour Redis
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-redis-traffic
  namespace: redis
spec:
  description: "Allow traffic to Redis"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: redis
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: banadoctor-backend
    toPorts:
    - ports:
      - port: "6379"
        protocol: TCP
  egress: []
---
# Configuration de la politique réseau pour Redis Exporter
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-redis-exporter-traffic
  namespace: redis
spec:
  description: "Allow traffic to Redis Exporter"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: redis-exporter
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: prometheus-operator
    toPorts:
    - ports:
      - port: "9121"
        protocol: TCP
  egress: []
