infra/k8s/scylladb.yaml
---
# Configuration de la politique réseau pour ScyllaDB
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-scylladb-traffic
  namespace: scylladb
spec:
  description: "Allow traffic to ScyllaDB"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: scylladb
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: banadoctor-backend
    toPorts:
    - ports:
      - port: "9042"
        protocol: TCP
      - port: "7000"
        protocol: TCP
      - port: "7001"
        protocol: TCP
      - port: "9160"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: scylladb
    toPorts:
    - ports:
      - port: "7000-7001"
        protocol: TCP
      - port: "7199"
        protocol: TCP
      - port: "9042"
        protocol: TCP
      - port: "9160"
        protocol: TCP
      - port: "10000"
        protocol: TCP
  egress: []
