infra/k8s/solr.yaml
---
# Configuration de la politique réseau pour Apache Solr
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-solr-traffic
  namespace: search
spec:
  description: "Allow traffic to Apache Solr"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: solr
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: banadoctor-backend
    toPorts:
    - ports:
      - port: "8983"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: solr
    toPorts:
    - ports:
      - port: "8983"
        protocol: TCP
      - port: "9983"
        protocol: TCP
  egress: []
---
# Configuration de la politique réseau pour Zookeeper
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-solr-zookeeper-traffic
  namespace: search
spec:
  description: "Allow traffic to Zookeeper for Solr"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: solr-zookeeper
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: solr
    toPorts:
    - ports:
      - port: "2181"
        protocol: TCP
      - port: "2888"
        protocol: TCP
      - port: "3888"
        protocol: TCP
  egress: []
