infra/k8s/timescaledb.yaml
---
# Configuration de la politique réseau pour TimescaleDB
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-timescaledb-traffic
  namespace: timeseries
spec:
  description: "Allow traffic to TimescaleDB"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: timescaledb
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: banadoctor-backend
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: timescaledb
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
      - port: "8008"
        protocol: TCP
  egress: []
