infra/k8s/vitess.yaml
---
# Configuration de la politique réseau pour Vitess
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-vitess-traffic
  namespace: vitess
spec:
  description: "Allow traffic to Vitess"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vitess
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: banadoctor-backend
    toPorts:
    - ports:
      - port: "15000"
        protocol: TCP
      - port: "15999"
        protocol: TCP
      - port: "3306"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: vitess
    toPorts:
    - ports:
      - port: "15000"
        protocol: TCP
      - port: "15999"
        protocol: TCP
      - port: "3306"
        protocol: TCP
      - port: "15001"
        protocol: TCP
      - port: "15002"
        protocol: TCP
  egress: []
